@@ -1,6 +1,7 @@
 Tis file documents the revision history for Perl extension Catalyst.
 
 5.5
+        - Updated built in server to restart on win32
         - Fixed streaming write from a filehandle to stop writing
           if the browser is closed.
         - Added $c->controller, $c->model and $c->view shortcuts
